# rust_n_body

./: .gitignore  Cargo.toml  README.md  compiled.wasm  index.html
src/: input.rs  labels.rs  main.rs  particle.rs  time.rs  trail_point.rs
