[package]
name = "test_game"
version = "0.1.0"
authors = ["Zotho <svjatoslavalekseef2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git="https://github.com/not-fl3/macroquad.git" }
vecmath = "1.0.0"
itertools = "0.9"
rand = "0.7"