[package]
name = "test_game"
version = "0.1.0"
authors = ["Zotho <svjatoslavalekseef2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
raindow_trail = []
tail_area_optimize = []
draw_lines = []

[dependencies]
#macroquad = { git="https://github.com/not-fl3/macroquad.git" }
macroquad = { path="../macroquad_simple_lines" }
vecmath = "1.0.0"
itertools = "0.9"