[package]
name = "rust_n_body"
version = "0.1.0"
authors = ["Zotho <svjatoslavalekseef2@gmail.com>"]
edition = "2018"


[profile.dev.package.'*']
opt-level = 3


[features]
default = ["raindow_trail", "tail_area_optimize"]

raindow_trail = []
tail_area_optimize = []
draw_lines = []


[dependencies]
macroquad = { git="https://github.com/not-fl3/macroquad.git", version="0.3.7" }
vecmath = "1.0.0"
itertools = "0.10.0"